Changed some of the comparators to use lambdas